--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  provider: ^6.1.2
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_localizations:     # (l10n)
+    sdk: flutter             # (l10n)
+  intl: any                  # (l10n)
   # flutter_native_splash: ^2.4.0
 
 # flutter_native_splash:
@@ -55,6 +59,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true # Add this line (l10n)
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
@@ -82,3 +87,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
